RESOLVED FIXED314839
REGRESSION(313222@main): error: double-quoted include "Node.h" in framework header
https://bugs.webkit.org/show_bug.cgi?id=314839
Summary REGRESSION(313222@main): error: double-quoted include "Node.h" in framework h...
Jonathan Bedard
Reported 2026-05-14 12:21:04 PDT
/System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/Desktop/Build/Build/Products/webkit/WebCore.framework/PrivateHeaders/AXObjectTypes.h:28:10: error: double-quoted include "Node.h" in framework header, expected angle-bracketed instead [-Werror,-Wquoted-include-in-framework-header]
Attachments
Jonathan Bedard
Comment 1 2026-05-14 12:21:05 PDT
Jonathan Bedard
Comment 2 2026-05-14 12:21:58 PDT
EWS
Comment 3 2026-05-14 12:29:13 PDT
Committed 313261@main (76a66db2ed1b): <https://commits.webkit.org/313261@main> Reviewed commits have been landed. Closing PR #64944 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.