REGRESSION(313222@main): error: double-quoted include "Node.h" in framework header https://bugs.webkit.org/show_bug.cgi?id=314839 rdar://177093060

Unreviewed build fix.

* Source/WebCore/accessibility/AXObjectTypes.h:

Canonical link: https://commits.webkit.org/313261@main